deploy/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
    name: traefik
spec:
    gatewayClassName: traefik
    listeners:
        - name: http
          port: 8000
          protocol: HTTP
          allowedRoutes:
              namespaces:
                  from: All
        - name: https
          port: 8443
          protocol: HTTPS
          allowedRoutes:
              namespaces:
                  from: All
          tls:
              mode: Terminate
              certificateRefs:
                  - name: gateway
                    namespace: traefik
